@@ -12,9 +12,45 @@
 // `COPYING' file in the root directory.
 //
 
-#include <svp/roman.h>
 #include <svp/testoutput.h>
 #include <svp/slr.h>
+
+static struct roman_table_t {
+  long base;
+  const char* repr;
+} roman_table[] = {
+  {   50000, "(L)" },
+  {   10000, "(X)" },
+  {    5000, "(V)" },
+  {    1000,   "M" },
+  {     500,   "D" },
+  {     100,   "C" },
+  {      50,   "L" },
+  {      10,   "X" },
+  {       5,   "V" },
+  {       1,   "I" },
+  {       0,     0 }
+};
+
+sl_def(roman, sl__static, sl_glparm(short, x))
+{
+  long num = sl_getp(x);
+  if (num < 0) {
+    output_char('-', 1);
+    num = -num;
+  }
+
+  struct roman_table_t *p = roman_table;
+  const char *s;
+
+  for (p = roman_table; p->base; ++p)
+    while(num >= p->base) {
+      for (s = p->repr; *s; ++s) output_char(*s, 1);
+      num = num - p->base;
+    };
+}
+sl_enddef
+
 
 slr_decl(slr_var(short, N, "number to print"));
 
